--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAEZNYmf7gdzTsCMgx9nhkig_Pb-jpjVzU",
+        authDomain: "multiplayer-car-game-bd822.firebaseapp.com",
+        databaseURL: "https://multiplayer-car-game-bd822.firebaseio.com",
+        projectId: "multiplayer-car-game-bd822",
+        storageBucket: "multiplayer-car-game-bd822.appspot.com",
+        messagingSenderId: "396597276730",
+        appId: "1:396597276730:web:690ff19b37983ce6044503"
+      };
       
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
